thehive/30-thehive.yml
apiVersion: v1
kind: Pod
metadata:
  name: thehive
  labels:
    app: thehive
spec:
  hostname: thehive
  subdomain: monitoring
  containers:
  - name: thehive
    image: thehiveproject/thehive4:latest
    ports:
    - containerPort: 9000
    args: ["--no-config", "--no-config-secret",]
    volumeMounts:
    - name: thehive-config
      mountPath: /etc/thehive
      readOnly: true
    - name: thehive-data
      mountPath: /opt/data
  volumes:
  - name: thehive-config
    configMap: 
      name: thehive-config
  - name: thehive-data
    emptyDir: {}
