thehive/20-thehive-service.yml
apiVersion: v1
kind: Service
metadata:
  name: thehive
spec:
  type: ClusterIP
  selector:
    app: thehive
  ports:
  - protocol: TCP
    port: 9000
    targetPort: 9000
