thehive/20-thehive-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: thehive-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: thehive.corp.sicher.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: thehive
            port:
              number: 9000
